--- Auto-Git Commit ---

--- a/Linux/Debug/perf/1. perf 简介.md
+++ b/Linux/Debug/perf/1. perf 简介.md
@@ -2159,7 +2159,40 @@ You can now use it in all perf tools, such as:
 在整个系统范围进行追踪:
 
 ```
+# perf record -e probe_libc:malloc -a
+^C[ perf record: Woken up 12 times to write data ]
+[ perf record: Captured and wrote 3.522 MB perf.data (~153866 samples) ]
+```
 
+report分析:
+
+```
+# perf report -n
+[...]
+# Samples: 45K of event 'probe_libc:malloc'
+# Event count (approx.): 45158
+#
+# Overhead       Samples          Command  Shared Object      Symbol
+# ........  ............  ...............  .............  ..........
+#
+    42.72%         19292       apt-config  libc-2.15.so   [.] malloc
+    19.71%          8902             grep  libc-2.15.so   [.] malloc
+     7.88%          3557             sshd  libc-2.15.so   [.] malloc
+     6.25%          2824              sed  libc-2.15.so   [.] malloc
+     6.06%          2738            which  libc-2.15.so   [.] malloc
+     4.12%          1862  update-motd-upd  libc-2.15.so   [.] malloc
+     3.72%          1680             stat  libc-2.15.so   [.] malloc
+     1.68%           758            login  libc-2.15.so   [.] malloc
+     1.21%           546        run-parts  libc-2.15.so   [.] malloc
+     1.21%           545               ls  libc-2.15.so   [.] malloc
+     0.80%           360        dircolors  libc-2.15.so   [.] malloc
+     0.56%           252               tr  libc-2.15.so   [.] malloc
+     0.54%           242              top  libc-2.15.so   [.] malloc
+     0.49%           222       irqbalance  libc-2.15.so   [.] malloc
+     0.44%           200             dpkg  libc-2.15.so   [.] malloc
+     0.38%           173         lesspipe  libc-2.15.so   [.] malloc
+     0.29%           130  update-motd-fsc  libc-2.15.so   [.] malloc
+     0.25%           112            uname  libc-2.15.so   [.] malloc
 ```
 
 
