--- Auto-Git Commit ---

--- a/Linux/Debug/perf/1. perf 简介.md
+++ b/Linux/Debug/perf/1. perf 简介.md
@@ -65,10 +65,11 @@
     - [9.4.4. Socket Buffers:](#944-socket-buffers)
   - [9.5. Static User Tracing: 用户态静态追踪](#95-static-user-tracing-用户态静态追踪)
   - [9.6. Dynamic Tracing: 动态追踪](#96-dynamic-tracing-动态追踪)
-    - [Kernel: tcp_sending(): 某个内核函数被调用栈](#kernel-tcp_sending-某个内核函数被调用栈)
+    - [Kernel: tcp_sending(): 某个内核函数](#kernel-tcp_sending-某个内核函数)
     - [Kernel: tcp_sendmsg() with size: 获取内核变量](#kernel-tcp_sendmsg-with-size-获取内核变量)
     - [Kernel: tcp_sendmsg() line number and local variable: 内核函数某一行跟踪点和局部变量](#kernel-tcp_sendmsg-line-number-and-local-variable-内核函数某一行跟踪点和局部变量)
     - [User: malloc(): 用户态函数](#user-malloc-用户态函数)
+    - [User: malloc() with size:](#user-malloc-with-size)
   - [9.7. Scheduler Analysis: 调度器分析](#97-scheduler-analysis-调度器分析)
   - [9.8. eBPF](#98-ebpf)
     - [9.8.1.](#981)
@@ -1926,7 +1927,7 @@ address should be. The 'p' modifier can be specified multiple times:
 
 对于用户态, 配置`CONFIG_UPROBES=y`和`CONFIG_UPROBE_EVENTS=y`, 从而开启用户态动态追踪功能.
 
-### Kernel: tcp_sending(): 某个内核函数被调用栈
+### Kernel: tcp_sending(): 某个内核函数
 
 ```
 # ./perf probe --add tcp_sendmsg
@@ -2194,6 +2195,10 @@ report分析:
      0.29%           130  update-motd-fsc  libc-2.15.so   [.] malloc
      0.25%           112            uname  libc-2.15.so   [.] malloc
 ```
+
+显示调用`malloc()`最多的是`apt-config`.
+
+### User: malloc() with size: 
 
 
 ## 9.7. Scheduler Analysis: 调度器分析
