--- Auto-Git Commit ---

--- a/Linux/Debug/perf/1. perf 简介.md
+++ b/Linux/Debug/perf/1. perf 简介.md
@@ -2203,7 +2203,15 @@ report分析:
 
 ## 9.7. Scheduler Analysis: 调度器分析
 
-`perf sched`子命令用来分析内核的CPU调度行为.
+`perf sched`子命令用来分析内核的CPU调度行为. 可以通过它来**识别**和**量化**调度延迟的问题。
+
+它会检测调度程序事件并将其转储到perf.data文件中，以供以后分析。 例如：
+
+```
+
+```
+
+
 
 ## 9.8. eBPF
 
