--- Auto-Git Commit ---

--- a/Linux/Debug/perf/1. perf 简介.md
+++ b/Linux/Debug/perf/1. perf 简介.md
@@ -2205,11 +2205,14 @@ report分析:
 
 `perf sched`子命令用来分析内核的CPU调度行为. 可以通过它来**识别**和**量化**调度延迟的问题。
 
-它会检测调度程序事件并将其转储到perf.data文件中，以供以后分析。 例如：
+它会检测**调度事件**并将其转储到`perf.data`文件中，以供以后分析。 例如：
 
 ```
-
+# perf sched record -- sleep 1
+[ perf record: Woken up 1 times to write data ]
+[ perf record: Captured and wrote 1.886 MB perf.data (13502 samples) ]
 ```
+
 
 
 
