--- Auto-Git Commit ---

--- a/Linux/Debug/perf/1. perf 简介.md
+++ b/Linux/Debug/perf/1. perf 简介.md
@@ -2213,7 +2213,7 @@ report分析:
 [ perf record: Captured and wrote 1.886 MB perf.data (13502 samples) ]
 ```
 
-一秒钟有1.9 MB，包括13502个样本. **大小**和**速率**与**工作负载**和**CPU数量**有关。 已将其写入文件系统的方式进行了优化：仅唤醒一次即可读取事件缓冲区并将其写入磁盘，这大大降低了开销。 也就是说，检测所有调度程序事件并将事件数据写入文件系统仍存在大量开销。 这些事件：
+一秒钟有1.9 MB，包括13502个样本. **大小**和**速率**与**工作负载**和**CPU数量**有关。 已将其写入文件系统的方式进行了优化：**仅唤醒一次**即可读取事件缓冲区并将其写入磁盘，这大大降低了开销。 也就是说，检测所有调度程序事件并将事件数据写入文件系统仍存在大量开销。 这些事件：
 
 
 ## 9.8. eBPF
