--- Auto-Git Commit ---

--- a/Linux/Debug/perf/1. perf 简介.md
+++ b/Linux/Debug/perf/1. perf 简介.md
@@ -2215,39 +2215,9 @@ report分析:
 
 一秒钟有1.9 MB，包括13502个样本. **大小**和**速率**与**工作负载**和**CPU数量**有关。 已将其写入文件系统的方式进行了优化：**仅唤醒一次**即可读取事件缓冲区并将其写入磁盘，这大大降低了开销。也就是说，检测所有调度程序事件并将事件数据写入文件系统仍存在大量开销。这些事件：
 
-```
-# perf script --header
-# ========
-# captured on: Sun Feb 26 19:40:00 2017
-# hostname : bgregg-xenial
-# os release : 4.10-virtual
-# perf version : 4.10
-# arch : x86_64
-# nrcpus online : 8
-# nrcpus avail : 8
-# cpudesc : Intel(R) Xeon(R) CPU E5-2680 v2 @ 2.80GHz
-# cpuid : GenuineIntel,6,62,4
-# total memory : 15401700 kB
-# cmdline : /usr/bin/perf sched record -- sleep 1 
-# event : name = sched:sched_switch, , id = { 2752, 2753, 2754, 2755, 2756, 2757, 2758, 2759 }, type = 2, size = 11...
-# event : name = sched:sched_stat_wait, , id = { 2760, 2761, 2762, 2763, 2764, 2765, 2766, 2767 }, type = 2, size =...
-# event : name = sched:sched_stat_sleep, , id = { 2768, 2769, 2770, 2771, 2772, 2773, 2774, 2775 }, type = 2, size ...
-# event : name = sched:sched_stat_iowait, , id = { 2776, 2777, 2778, 2779, 2780, 2781, 2782, 2783 }, type = 2, size...
-# event : name = sched:sched_stat_runtime, , id = { 2784, 2785, 2786, 2787, 2788, 2789, 2790, 2791 }, type = 2, siz...
-# event : name = sched:sched_process_fork, , id = { 2792, 2793, 2794, 2795, 2796, 2797, 2798, 2799 }, type = 2, siz...
-# event : name = sched:sched_wakeup, , id = { 2800, 2801, 2802, 2803, 2804, 2805, 2806, 2807 }, type = 2, size = 11...
-# event : name = sched:sched_wakeup_new, , id = { 2808, 2809, 2810, 2811, 2812, 2813, 2814, 2815 }, type = 2, size ...
-# event : name = sched:sched_migrate_task, , id = { 2816, 2817, 2818, 2819, 2820, 2821, 2822, 2823 }, type = 2, siz...
-# HEADER_CPU_TOPOLOGY info available, use -I to display
-# HEADER_NUMA_TOPOLOGY info available, use -I to display
-# pmu mappings: breakpoint = 5, power = 7, software = 1, tracepoint = 2, msr = 6
-# HEADER_CACHE info available, use -I to display
-# missing features: HEADER_BRANCH_STACK HEADER_GROUP_DESC HEADER_AUXTRACE HEADER_STAT 
-# ========
-#
-    perf 16984 [005] 991962.879966:       sched:sched_wakeup: comm=perf pid=16999 prio=120 target_cpu=005
-[...]
-```
+![2020-12-27-18-25-36.png](./images/2020-12-27-18-25-36.png)
+
+
 
 
 ## 9.8. eBPF
