--- a/Linux/Debug/perf/1. perf 简介.md
+++ b/Linux/Debug/perf/1. perf 简介.md
@@ -2217,6 +2217,8 @@ report分析:
 
 ![2020-12-27-18-25-36.png](./images/2020-12-27-18-25-36.png)
 
+如果开销是一个问题，则可以使用我的eBPF / bcc工具，包括runqlat和runqlen，它们使用调度程序事件的内核摘要，从而进一步减少开销。 perf sched转储所有事件的一个优点是您不仅限于摘要。 如果捕获到间歇性事件，则可以自定义方式分析那些记录的事件，直到您了解问题为止，而无需第二次捕获它。
+
 
 
 
