--- Auto-Git Commit ---

--- a/Linux/Debug/perf/1. perf 简介.md
+++ b/Linux/Debug/perf/1. perf 简介.md
@@ -2213,7 +2213,13 @@ report分析:
 [ perf record: Captured and wrote 1.886 MB perf.data (13502 samples) ]
 ```
 
-一秒钟有1.9 MB，包括13502个样本. **大小**和**速率**与**工作负载**和**CPU数量**有关。 已将其写入文件系统的方式进行了优化：**仅唤醒一次**即可读取事件缓冲区并将其写入磁盘，这大大降低了开销。也就是说，检测所有调度程序事件并将事件数据写入文件系统仍存在大量开销。这些事件：
+一秒钟有1.9 MB，包括13502个样本. **大小**和**速率**与**工作负载**和**CPU数量**有关。 已将其写入文件系统的方式进行了优化：**仅唤醒一次**即可读取事件缓冲区并将其写入磁盘，这大大降低了开销。也就是说，检测所有调度程序事件并将事件数据写入文件系统仍存在大量开销。
+
+查看`perf.data`中的事件：
+
+```
+perf script --header
+```
 
 ![2020-12-27-18-25-36.png](./images/2020-12-27-18-25-36.png)
 
@@ -2225,6 +2231,10 @@ trace文件能够用很多方式分析, 可以通过help信息看到摘要:
 
 `perf sched latency`将按task概述**调度延迟**，包括**平均**和**最大延迟**
 
+```
+# perf sched latency
+
+```
 
 
 ## 9.8. eBPF
