--- a/Linux/Debug/perf/1. perf 简介.md
+++ b/Linux/Debug/perf/1. perf 简介.md
@@ -2227,6 +2227,10 @@ perf script --header
 
 trace文件能够用很多方式分析, 可以通过help信息看到摘要:
 
+```
+perf sched -h
+```
+
 ![2020-12-27-19-11-28.png](./images/2020-12-27-19-11-28.png)
 
 `perf sched latency`将按task概述**调度延迟**，包括**平均**和**最大延迟**
