--- Auto-Git Commit ---

--- a/Linux/Debug/perf/1. perf 简介.md
+++ b/Linux/Debug/perf/1. perf 简介.md
@@ -72,6 +72,8 @@
     - [User: malloc() with size:](#user-malloc-with-size)
   - [9.7. Scheduler Analysis: 调度器分析](#97-scheduler-analysis-调度器分析)
     - [数据采样](#数据采样)
+    - [查看数据文件中的事件](#查看数据文件中的事件)
+    - [](#)
   - [9.8. eBPF](#98-ebpf)
     - [9.8.1.](#981)
     - [9.8.2. 事件限定符](#982-事件限定符)
@@ -2218,6 +2220,8 @@ report分析:
 
 一秒钟有1.9 MB，包括13502个样本. **大小**和**速率**与**工作负载**和**CPU数量**有关。 已将其写入文件系统的方式进行了优化：**仅唤醒一次**即可读取事件缓冲区并将其写入磁盘，这大大降低了开销。也就是说，检测所有调度程序事件并将事件数据写入文件系统仍存在大量开销。
 
+### 查看数据文件中的事件
+
 查看`perf.data`中的事件：
 
 ```
@@ -2227,6 +2231,8 @@ perf script --header
 ![2020-12-27-18-25-36.png](./images/2020-12-27-18-25-36.png)
 
 如果开销是一个问题，则可以使用我的eBPF / bcc工具，包括runqlat和runqlen，它们使用调度程序事件的内核摘要，从而进一步减少开销。 `perf sched`转储**所有事件**的一个优点是**不仅限于summary摘要**, 可以**自定义方式分析**那些记录的事件，直到您了解问题为止，而**无需第二次捕获**它。
+
+### 
 
 trace文件能够用很多方式分析, 可以通过help信息看到摘要:
 
