--- a/Linux/Debug/perf/1. perf 简介.md
+++ b/Linux/Debug/perf/1. perf 简介.md
@@ -73,7 +73,7 @@
   - [9.7. Scheduler Analysis: 调度器分析](#97-scheduler-analysis-调度器分析)
     - [数据采样](#数据采样)
     - [查看数据文件中的事件](#查看数据文件中的事件)
-    - [](#)
+    - [对数据文件进行分析](#对数据文件进行分析)
   - [9.8. eBPF](#98-ebpf)
     - [9.8.1.](#981)
     - [9.8.2. 事件限定符](#982-事件限定符)
@@ -2232,9 +2232,9 @@ perf script --header
 
 如果开销是一个问题，则可以使用我的eBPF / bcc工具，包括runqlat和runqlen，它们使用调度程序事件的内核摘要，从而进一步减少开销。 `perf sched`转储**所有事件**的一个优点是**不仅限于summary摘要**, 可以**自定义方式分析**那些记录的事件，直到您了解问题为止，而**无需第二次捕获**它。
 
-### 
+### 对数据文件进行分析
 
-trace文件能够用很多方式分析, 可以通过help信息看到摘要:
+trace文件能够用很多方式进行分析, 可以通过help信息看到摘要:
 
 ```
 perf sched -h
@@ -2242,12 +2242,39 @@ perf sched -h
 
 ![2020-12-27-19-11-28.png](./images/2020-12-27-19-11-28.png)
 
-`perf sched latency`将按task概述**调度延迟**，包括**平均**和**最大延迟**
+`perf sched latency`将**按task**概述**调度延迟**，包括**平均**和**最大延迟**
 
 ```
 # perf sched latency
 
+ -----------------------------------------------------------------------------------------------------------------
+  Task                  |   Runtime ms  | Switches | Average delay ms | Maximum delay ms | Maximum delay at       |
+ -----------------------------------------------------------------------------------------------------------------
+  cat:(6)               |     12.002 ms |        6 | avg:   17.541 ms | max:   29.702 ms | max at: 991962.948070 s
+  ar:17043              |      3.191 ms |        1 | avg:   13.638 ms | max:   13.638 ms | max at: 991963.048070 s
+  rm:(10)               |     20.955 ms |       10 | avg:   11.212 ms | max:   19.598 ms | max at: 991963.404069 s
+  objdump:(6)           |     35.870 ms |        8 | avg:   10.969 ms | max:   16.509 ms | max at: 991963.424443 s
+  :17008:17008          |    462.213 ms |       50 | avg:   10.464 ms | max:   35.999 ms | max at: 991963.120069 s
+  grep:(7)              |     21.655 ms |       11 | avg:    9.465 ms | max:   24.502 ms | max at: 991963.464082 s
+  fixdep:(6)            |     81.066 ms |        8 | avg:    9.023 ms | max:   19.521 ms | max at: 991963.120068 s
+  mv:(10)               |     30.249 ms |       14 | avg:    8.380 ms | max:   21.688 ms | max at: 991963.200073 s
+[...]
 ```
+
+为了阐明如何进行测量和计算，我将说明导致最上面的“最大延迟时间为” 29.702 ms的事件。 以下是来自`perf sched script`的**原始事件**：
+
+```
+      sh 17028 [001] 991962.918368:   sched:sched_wakeup_new: comm=sh pid=17030 prio=120 target_cpu=002
+[...]
+     cc1 16819 [002] 991962.948070:       sched:sched_switch: prev_comm=cc1 prev_pid=16819 prev_prio=120
+                                                            prev_state=R ==> next_comm=sh next_pid=17030 next_prio=120
+[...]
+```
+
+从**wakeup**(991962.918368，以秒为单位)到**上下文切换**(991962.948070)的时间为`29.702`毫秒。 **此过程**在原始事件中被列为`“sh”`（shell），但不久之后执行程序`“cat”`，因此在`perf sched latency`输出中显示为“cat”。
+
+
+
 
 
 ## 9.8. eBPF
