--- a/Linux/Debug/perf/1. perf 简介.md
+++ b/Linux/Debug/perf/1. perf 简介.md
@@ -71,9 +71,11 @@
     - [User: malloc(): 用户态函数](#user-malloc-用户态函数)
     - [User: malloc() with size:](#user-malloc-with-size)
   - [9.7. Scheduler Analysis: 调度器分析](#97-scheduler-analysis-调度器分析)
-    - [数据采样](#数据采样)
-    - [查看数据文件中的事件](#查看数据文件中的事件)
+    - [perf sched record: 数据采样](#perf-sched-record-数据采样)
+    - [perf script --header: 查看数据文件中的事件](#perf-script-header-查看数据文件中的事件)
     - [对数据文件进行分析](#对数据文件进行分析)
+      - [perf sched latency: 调度延迟分析](#perf-sched-latency-调度延迟分析)
+      - [perf sched map:](#perf-sched-map)
   - [9.8. eBPF](#98-ebpf)
     - [9.8.1.](#981)
     - [9.8.2. 事件限定符](#982-事件限定符)
@@ -2208,7 +2210,7 @@ report分析:
 
 `perf sched`子命令用来分析内核的CPU调度行为. 可以通过它来**识别**和**量化**调度延迟的问题。
 
-### 数据采样
+### perf sched record: 数据采样
 
 它会检测**调度事件**并将其转储到`perf.data`文件中，以供以后分析。 例如：
 
@@ -2220,7 +2222,7 @@ report分析:
 
 一秒钟有1.9 MB，包括13502个样本. **大小**和**速率**与**工作负载**和**CPU数量**有关。 已将其写入文件系统的方式进行了优化：**仅唤醒一次**即可读取事件缓冲区并将其写入磁盘，这大大降低了开销。也就是说，检测所有调度程序事件并将事件数据写入文件系统仍存在大量开销。
 
-### 查看数据文件中的事件
+### perf script --header: 查看数据文件中的事件
 
 查看`perf.data`中的事件：
 
@@ -2230,7 +2232,7 @@ perf script --header
 
 ![2020-12-27-18-25-36.png](./images/2020-12-27-18-25-36.png)
 
-如果开销是一个问题，则可以使用我的eBPF / bcc工具，包括runqlat和runqlen，它们使用调度程序事件的内核摘要，从而进一步减少开销。 `perf sched`转储**所有事件**的一个优点是**不仅限于summary摘要**, 可以**自定义方式分析**那些记录的事件，直到您了解问题为止，而**无需第二次捕获**它。
+如果开销是一个问题，则可以使用[eBPF/bcc](http://www.brendangregg.com/ebpf.html#bcc)工具，包括runqlat和runqlen，它们使用调度程序事件的内核摘要，从而进一步减少开销。 `perf sched`转储**所有事件**的一个优点是**不仅限于summary摘要**, 可以**自定义方式分析**那些记录的事件，直到您了解问题为止，而**无需第二次捕获**它。
 
 ### 对数据文件进行分析
 
@@ -2241,6 +2243,8 @@ perf sched -h
 ```
 
 ![2020-12-27-19-11-28.png](./images/2020-12-27-19-11-28.png)
+
+#### perf sched latency: 调度延迟分析
 
 `perf sched latency`将**按task**概述**调度延迟**，包括**平均**和**最大延迟**
 
@@ -2261,7 +2265,9 @@ perf sched -h
 [...]
 ```
 
-为了阐明如何进行测量和计算，我将说明导致最上面的“最大延迟时间为” 29.702 ms的事件。 以下是来自`perf sched script`的**原始事件**：
+为了阐明如何进行测量和计算，我将说明导致最上面的“最大延迟时间为” 29.702 ms的**事件**。 
+
+以下是来自`perf sched script`的**原始事件**：
 
 ```
       sh 17028 [001] 991962.918368:   sched:sched_wakeup_new: comm=sh pid=17030 prio=120 target_cpu=002
@@ -2271,13 +2277,20 @@ perf sched -h
 [...]
 ```
 
-从**wakeup**(991962.918368，以秒为单位)到**上下文切换**(991962.948070)的时间为`29.702`毫秒。 **此过程**在原始事件中被列为`“sh”`（shell），但不久之后执行程序`“cat”`，因此在`perf sched latency`输出中显示为“cat”。
+从**wakeup**(991962.918368，**以秒为单位**)到**上下文切换**(991962.948070)的时间为`29.702`毫秒。 **此过程**在原始事件中被列为`“sh”`（shell），但不久之后执行程序`“cat”`，因此在`perf sched latency`输出中显示为“cat”。
 
+#### perf sched map:
+
+`perf sched map`显示了所有CPU和上下文切换事件, 各列表示每个CPU在做什么以及何时进行。 这是您在调度程序分析GUI中看到的可视化数据（包括perf时间图，布局旋转了90度）。 输出示例：
 
 
 
 
 ## 9.8. eBPF
+
+从Linux 4.4开始，perf具有一些**增强的BPF支持**（又名eBPF或简称为“ BPF”），在更高版本的内核中有更多支持。 BPF使perf跟踪成为程序化，并将perf从计数和带后处理的采样跟踪器转变为完全在内核中的可编程跟踪器。
+
+eBPF当前受到perf的限制，很难使用。 一直在变好。 通过bcc Python界面是访问eBPF的一种不同且当前更简单的方法，该界面在我的eBPF工具页面上进行了描述。 在此页面上，我将讨论性能。
 
 ### 9.8.1. 
 
