--- Auto-Git Commit ---

--- a/Linux/Debug/perf/1. perf 简介.md
+++ b/Linux/Debug/perf/1. perf 简介.md
@@ -974,9 +974,9 @@ Perf是一个包含很多种子工具的多功能工具集，功能很全面。
 
 perf工具可以分为**三种方式**：
 
-* `counting`(**计数**): 在**内核上下文**中对**事件**进行**计数**，其中perf打印计数摘要。 此模式**不会生成perf.data文件**。
-* `sampling`(**采样**): 采样事件，将**事件数据**写入**内核缓冲区**，perf命令以柔和的异步速率读取事件数据，以写入`perf.data`文件。 然后，perf report或perf script命令将**读取此文件**。
-* `bpf`(**动态插入自定义程序**): 事件的**bpf程序**，这是Linux 4.4+内核中的一项新功能，可以在**内核空间**中执行**自定义的用户定义程序**，从而可以执行高效的数据过滤和汇总。 例如，有效测量的时间延迟直方图。
+* `counting`(**计数**): 在**内核上下文**中对**事件**进行**计数**，其中perf打印计数摘要。 此模式**不会生成perf.data文件**。`counting tracer`**计数追踪器**.
+* `sampling`(**采样**): 采样事件，将**事件数据**写入**内核缓冲区**，perf命令以柔和的异步速率读取事件数据，以写入`perf.data`文件。 然后，`perf report`或`perf script`命令将**读取此文件**。`sampling-with-post-processing tracer`采样然后处理追踪器.
+* `bpf`(**动态插入自定义程序**): 事件的**bpf程序**，这是Linux 4.4+内核中的一项新功能，可以在**内核空间**中执行**自定义的用户定义程序**，从而可以执行高效的数据过滤和汇总。 例如，有效测量的时间延迟直方图。`programmable tracer`可编程追踪器.
 
 而这也对应了性能分析的三个过程: 
 
@@ -2288,7 +2288,7 @@ perf sched -h
 
 ## 9.8. eBPF
 
-从Linux 4.4开始，perf具有一些**增强的BPF支持**（又名eBPF或简称为“ BPF”），在更高版本的内核中有更多支持。 BPF使perf跟踪成为程序化，并将perf从计数和带后处理的采样跟踪器转变为完全在内核中的可编程跟踪器。
+从Linux 4.4开始，perf具有一些**增强的BPF支持**（又名`eBPF`或**简称**为“BPF”），在更高版本的内核中有更多支持。 BPF使perf跟踪成为程序化，并将perf从`counting tracer`(**计数**)和`sampling-with-post-processing tracer`(**带后处理的采样**)跟踪器转变为完全在内核中的`programmable tracer`**可编程跟踪器**。
 
 eBPF当前受到perf的限制，很难使用。 一直在变好。 通过bcc Python界面是访问eBPF的一种不同且当前更简单的方法，该界面在我的eBPF工具页面上进行了描述。 在此页面上，我将讨论性能。
 
