--- Auto-Git Commit ---

--- a/Linux/Debug/perf/1. perf 简介.md
+++ b/Linux/Debug/perf/1. perf 简介.md
@@ -77,7 +77,8 @@
       - [perf sched latency: 调度延迟分析](#perf-sched-latency-调度延迟分析)
       - [perf sched map:](#perf-sched-map)
   - [9.8. eBPF](#98-ebpf)
-    - [9.8.1.](#981)
+    - [9.8.1. Prerequisites: 前提条件](#981-prerequisites-前提条件)
+    - [kmem_cache_alloc from Example](#kmem_cache_alloc-from-example)
     - [9.8.2. 事件限定符](#982-事件限定符)
   - [9.9. 性能事件的属性](#99-性能事件的属性)
     - [9.9.1. PMI中断和PEBS中断](#991-pmi中断和pebs中断)
@@ -976,7 +977,7 @@ perf工具可以分为**三种方式**：
 
 * `counting`(**计数**): 在**内核上下文**中对**事件**进行**计数**，其中perf打印计数摘要。 此模式**不会生成perf.data文件**。`counting tracer`**计数追踪器**.
 * `sampling`(**采样**): 采样事件，将**事件数据**写入**内核缓冲区**，perf命令以柔和的异步速率读取事件数据，以写入`perf.data`文件。 然后，`perf report`或`perf script`命令将**读取此文件**。`sampling-with-post-processing tracer`采样然后处理追踪器.
-* `bpf`(**动态插入自定义程序**): 事件的**bpf程序**，这是Linux 4.4+内核中的一项新功能，可以在**内核空间**中执行**自定义的用户定义程序**，从而可以执行高效的数据过滤和汇总。 例如，有效测量的时间延迟直方图。`programmable tracer`可编程追踪器.
+* `bpf`(**动态插入自定义程序**): 事件的**bpf程序**，这是Linux 4.4+内核中的一项新功能，可以在**内核空间**中执行**自定义的用户定义程序**，从而可以执行高效的**数据过滤**和**汇总**。 例如，有效测量的时间延迟直方图。`programmable tracer`可编程追踪器.
 
 而这也对应了性能分析的三个过程: 
 
@@ -2283,7 +2284,7 @@ perf sched -h
 
 `perf sched map`显示了所有CPU和上下文切换事件, 各列表示每个CPU在做什么以及何时进行。 这是您在调度程序分析GUI中看到的可视化数据（包括perf时间图，布局旋转了90度）。 输出示例：
 
-
+.........
 
 
 ## 9.8. eBPF
@@ -2292,7 +2293,24 @@ perf sched -h
 
 eBPF当前受到perf的限制，很难使用。 一直在变好。 通过bcc Python界面是访问eBPF的一种不同且当前更简单的方法，该界面在我的eBPF工具页面上进行了描述。 在此页面上，我将讨论性能。
 
-### 9.8.1. 
+### 9.8.1. Prerequisites: 前提条件
+
+至少Linux 4.4。 
+
+还有clang（例如，yum install clang）。
+
+### kmem_cache_alloc from Example
+
+
+
+
+
+
+
+
+
+
+
 
 ### 9.8.2. 事件限定符
 
@@ -2334,9 +2352,9 @@ Perf 在采样精度上定义了 4 个级别.
 Level | Comment
 ---|---
 0 | 无精度保证
-1 | 采样指令与触发性能事件的指令之间的偏差为常数（:p）
-2 | 需要尽量保证采样指令与触发性能事件的指令的偏差为0（:pp）
-3 | 保证采样指令与触发性能事件的指令之间的偏差**必须为0**（:ppp）
+1 | 采样指令与触发性能事件的指令之间的偏差为常数（`:p`）
+2 | 需要尽量保证采样指令与触发性能事件的指令的偏差为0（`:pp`）
+3 | 保证采样指令与触发性能事件的指令之间的偏差**必须为0**（`:ppp`）
 
 目前X86处理器，包括Intel处理器与AMD处理器Jun仅能实现前3个精度级别。
 
