--- Auto-Git Commit ---

--- a/Linux/Debug/perf/1. perf 简介.md
+++ b/Linux/Debug/perf/1. perf 简介.md
@@ -2301,9 +2301,104 @@ eBPF当前受到perf的限制，很难使用。 一直在变好。 通过bcc Pyt
 
 ### kmem_cache_alloc from Example
 
+该程序仅在其调用函数与在内核上下文中过滤的指定范围匹配时才跟踪内核`kmem_cache_alloc()`函数。 您可以想象这样做是为了提高效率：您不必跟踪所有分配（这会非常频繁并且会增加大量开销），而是仅对一系列感兴趣的内核调用函数（例如内核模块）进行过滤。 我将松散地匹配tcp函数作为示例，这些函数在内存中的以下地址处：
 
+```
+# grep tcp /proc/kallsyms | more
+[...]
+ffffffff817c1bb0 t tcp_get_info_chrono_stats
+ffffffff817c1c60 T tcp_init_sock
+ffffffff817c1e30 t tcp_splice_data_recv
+ffffffff817c1e70 t tcp_push
+ffffffff817c20a0 t tcp_send_mss
+ffffffff817c2170 t tcp_recv_skb
+ffffffff817c2250 t tcp_cleanup_rbuf
+[...]
+ffffffff818524f0 T tcp6_proc_exit
+ffffffff81852510 T tcpv6_exit
+ffffffff818648a0 t tcp6_gro_complete
+ffffffff81864910 t tcp6_gro_receive
+ffffffff81864ae0 t tcp6_gso_segment
+ffffffff8187bd89 t tcp_v4_inbound_md5_hash
+```
 
+我假设这些**函数是连续的**，因此通过跟踪范围`0xffffffff817c1bb0`到`0xffffffff8187bd89`，可以匹配很多tcp。
 
+这是我的BPF程序`kca_from.c`：
+
+```cpp
+#include <uapi/linux/bpf.h>
+#include <uapi/linux/ptrace.h>
+
+#define SEC(NAME) __attribute__((section(NAME), used))
+
+/*
+ * Edit the following to match the instruction address range you want to
+ * sample. Eg, look in /proc/kallsyms. The addresses will change for each
+ * kernel version and build.
+ */
+#define RANGE_START  0xffffffff817c1bb0
+#define RANGE_END    0xffffffff8187bd89
+
+struct bpf_map_def {
+	unsigned int type;
+	unsigned int key_size;
+	unsigned int value_size;
+	unsigned int max_entries;
+};
+
+static int (*probe_read)(void *dst, int size, void *src) =
+    (void *)BPF_FUNC_probe_read;
+static int (*get_smp_processor_id)(void) =
+    (void *)BPF_FUNC_get_smp_processor_id;
+static int (*perf_event_output)(void *, struct bpf_map_def *, int, void *,
+    unsigned long) = (void *)BPF_FUNC_perf_event_output;
+
+struct bpf_map_def SEC("maps") channel = {
+	.type = BPF_MAP_TYPE_PERF_EVENT_ARRAY,
+	.key_size = sizeof(int),
+	.value_size = sizeof(u32),
+	.max_entries = __NR_CPUS__,
+};
+
+SEC("func=kmem_cache_alloc")
+int func(struct pt_regs *ctx)
+{
+	u64 ret = 0;
+	// x86_64 specific:
+	probe_read(&ret, sizeof(ret), (void *)(ctx->bp+8));
+	if (ret >= RANGE_START && ret < RANGE_END) {
+		perf_event_output(ctx, &channel, get_smp_processor_id(), 
+		    &ret, sizeof(ret));
+	}
+	return 0;
+}
+
+char _license[] SEC("license") = "GPL";
+int _version SEC("version") = LINUX_VERSION_CODE;
+```
+
+现在，我将执行它，然后dump(转储)事件：
+
+```
+# perf record -e bpf-output/no-inherit,name=evt/ -e ./kca_from.c/map:channel.event=evt/ -a -- sleep 1
+bpf: builtin compilation failed: -95, try external compiler
+[ perf record: Woken up 1 times to write data ]
+[ perf record: Captured and wrote 0.214 MB perf.data (3 samples) ]
+
+# perf script
+ testserver00001 14337 [003] 481432.395181:          0     evt:  ffffffff81210f51 kmem_cache_alloc (/lib/modules/...)
+      BPF output: 0000: 0f b4 7c 81 ff ff ff ff  ..|.....
+                  0008: 00 00 00 00              ....    
+
+    redis-server  1871 [005] 481432.395258:          0     evt:  ffffffff81210f51 kmem_cache_alloc (/lib/modules/...)
+      BPF output: 0000: 14 55 7c 81 ff ff ff ff  .U|.....
+                  0008: 00 00 00 00              ....    
+
+    redis-server  1871 [005] 481432.395456:          0     evt:  ffffffff81210f51 kmem_cache_alloc (/lib/modules/...)
+      BPF output: 0000: fe dc 7d 81 ff ff ff ff  ..}.....
+                  0008: 00 00 00 00              .... 
+```
 
 
 
