--- Auto-Git Commit ---

--- a/Linux/Debug/perf/1. perf 简介.md
+++ b/Linux/Debug/perf/1. perf 简介.md
@@ -2301,7 +2301,7 @@ eBPF当前受到perf的限制，很难使用。 一直在变好。 通过bcc Pyt
 
 ### kmem_cache_alloc from Example
 
-该程序仅在其调用函数与在内核上下文中过滤的指定范围匹配时才跟踪内核`kmem_cache_alloc()`函数。 您可以想象这样做是为了提高效率：您不必跟踪所有分配（这会非常频繁并且会增加大量开销），而是仅对一系列感兴趣的内核调用函数（例如内核模块）进行过滤。 我将松散地匹配tcp函数作为示例，这些函数在内存中的以下地址处：
+该程序仅在其调用函数与在内核上下文中过滤的指定范围匹配时才跟踪内核`kmem_cache_alloc()`函数。 您可以想象这样做是为了提高效率：不必跟踪所有分配（这会非常频繁并且会增加大量开销），而是仅对一系列感兴趣的内核调用函数（例如内核模块）进行过滤。 我将松散地匹配tcp函数作为示例，这些函数在内存中的以下地址处：
 
 ```
 # grep tcp /proc/kallsyms | more
@@ -2399,6 +2399,7 @@ bpf: builtin compilation failed: -95, try external compiler
       BPF output: 0000: fe dc 7d 81 ff ff ff ff  ..}.....
                   0008: 00 00 00 00              .... 
 ```
+
 
 
 
