--- a/Virtualization/Learning/[Manual]AMD虚拟化/SVM/4. 启用SVM/1. 使能SVM[code].md
+++ b/Virtualization/Learning/[Manual]AMD虚拟化/SVM/4. 启用SVM/1. 使能SVM[code].md
@@ -22,7 +22,7 @@ vmx_init()                               // 初始化入口
      |   ├─ boot_cpu_has()                // CPU是否支持一些特性
 ```
 
-`kvm-amd` 模块初始化时候的检查
+`kvm-amd` **模块初始化**时候的检查
 
 # 2. CPU 是否支持 SVM
 
