--- Auto-Git Commit ---

--- a/Architecture/x86/指令系统/4.4 寻址方式.md
+++ b/Architecture/x86/指令系统/4.4 寻址方式.md
@@ -9,7 +9,7 @@
 
 **1. 指令寻址方式**
 
-指令的寻址方式有两种，一种是顺序寻址方式，另一种是跳跃寻址方式。
+指令的寻址方式有两种，一种是**顺序寻址**方式，另一种是**跳跃寻址**方式。
 
 1. 顺序寻址方式
 
@@ -48,19 +48,19 @@ ADD D1, 32123456H
 
 以上指令中的第二操作数都是立即数，在汇编语言中，规定：立即数不能作为指令中的第二操作数。该规定与高级语言中“赋值语句的左边不能是常量”的规定相一致。
 
-立即数寻址方式通常用于对通用寄存器或内存单元赋初值。图是指令“MOV AX, 4576H”存储形式和执行示意图。
+立即数寻址方式通常用于对通用寄存器或内存单元赋初值。图是指令“`MOV AX, 4576H`”存储形式和执行示意图。
 
 ![立即寻址示例](images/6.png)
 
 2．直接寻址方式
 
-直接寻址就是在指令的地址字段中直接指出操作数在主存中的地址，即形式地址等于有效地址，如图所示。这种寻址方式简单、直观，是一种最基本的寻址方式。
+直接寻址就是在指令的**地址字段**中直接指出**操作数**在**主存中的地址**，即形式地址等于有效地址，如图所示。这种寻址方式简单、直观，是一种最基本的寻址方式。
 
 ![直接寻址](images/3.png)
 
 在通常情况下，操作数存放在数据段DS中，所以，其物理地址将由数据段寄存器DS和指令中给出的有效地址直接形成，但如果使用段超越前缀，那么，操作数可存放在其它段。
 
-例：假设有指令：MOV BX, [1234H]，在执行时，(DS)=2000H，内存单元21234H的值为5213H。问该指令执行后，BX的值是什么？
+例：假设有指令：`MOV BX, [1234H]`，在执行时，(DS)=2000H，内存单元21234H的值为5213H。问该指令执行后，BX的值是什么？
 
 解：根据直接寻址方式的寻址规则，把该指令的具体执行过程用下图来表示。
 
@@ -80,14 +80,16 @@ ADD D1, 32123456H
 
 下面指令的目标操作数就是带有段前缀的直接寻址方式。
 
+```
 MOV　ES:[1000H], AX
+```
 
 直接寻址方式常用于处理内存单元的数据，其操作数是内存变量的值，该寻址方式可在64K字节的段内进行寻址。
 
 注意：立即寻址方式和直接寻址方式的书写格式的不同，直接寻址的地址要写在括号“[”，“]”内。在程序中，直接地址通常用内存变量名来表示，如：MOV BX, VARW，其中，VARW是内存字变量。
 
 试比较下列指令中源操作数的寻址方式(VARW是内存字变量)：
-
+```
 MOV　AX, 1234H //立即寻址
 
 MOV　AX, [1234H] //直接寻址
@@ -95,10 +97,11 @@ MOV　AX, [1234H] //直接寻址
 MOV　AX, VARW //直接寻址
 
 MOV　AX, [VARW] //与上面等效，直接寻址
+```
 
 3．间接寻址方式
 
-与直接寻址方式相比，间接寻址中指令地址码字段所指向的存储单元中存储的不是操作数本身，而是操作数的地址，如图所示。因此，间接寻址方式需要多次访问主存储器，既增加了指令的执行时间，又要占用主存储器单元。但是，这种寻址方式也为编程人员带来了较大的灵活性，实现起来也很简便，而且，间接寻址指令可以访问较大的存储空间，从而扩大指令的寻址能力。由于地址码位数的限制，如果采用直接寻址方式，能够访问的存储空间十分有限，而间接寻址的地址码所指向的存储单元则有足够的位数，因此可以访问全部存储空间。
+与直接寻址方式相比，间接寻址中指令**地址码字段**所指向的**存储单元**中**存储**的**不是操作数**本身，而是**操作数的地址**，如图所示。因此，间接寻址方式需要多次访问主存储器，既增加了指令的执行时间，又要占用主存储器单元。但是，这种寻址方式也为编程人员带来了较大的灵活性，实现起来也很简便，而且，间接寻址指令可以访问较大的存储空间，从而扩大指令的寻址能力。由于地址码位数的限制，如果采用直接寻址方式，能够访问的存储空间十分有限，而间接寻址的地址码所指向的存储单元则有足够的位数，因此可以访问全部存储空间。
 
 ![间接寻址](images/4.png)
 
@@ -127,7 +130,7 @@ PA=(DS)*16+DI=1000H*16+2345H=12345H。
 
 4．寄存器寻址方式
 
-寄存器寻址方式就是指令中的地址码是寄存器的编号，而不是操作数地址或操作数本身。寄存器的寻址方式也可以分为直接寻址和间接寻址，两者的区别在于：前者的指令地址码给出寄存器编号，寄存器的内容就是操作数本身；而后者的指令地址码给出寄存器编号，寄存器的内容是操作数的地址，根据该地址访问主存后才能得到真正的操作数。寄存器寻址方式的优点是用寄存器来暂存操作数或其地址，无需访问主存，速度快。通常情况下，我们提倡在编写汇编语言程序时，应尽可能地使用寄存器寻址方式，但也不要把它绝对化。
+寄存器寻址方式就是指令中的**地址码**是**寄存器的编号**，而不是操作数地址或操作数本身。寄存器的寻址方式也可以分为直接寻址和间接寻址，两者的区别在于：前者的指令地址码给出寄存器编号，寄存器的内容就是操作数本身；而后者的指令地址码给出寄存器编号，寄存器的内容是操作数的地址，根据该地址访问主存后才能得到真正的操作数。寄存器寻址方式的优点是用寄存器来暂存操作数或其地址，无需访问主存，速度快。通常情况下，我们提倡在编写汇编语言程序时，应尽可能地使用寄存器寻址方式，但也不要把它绝对化。
 
 对于8位操作数，寄存器可以是AL 、AH、BL、BH、CL、CH、DL、DH。
 
@@ -180,22 +183,25 @@ MOV DH, BL等。
 ![寄存器相对寻址计算](images/9.png)
 
 在不使用段超越前缀的情况下，有下列规定：
- 
+
 - 若有效地址用SI、DI和BX等之一来指定，则其缺省的段寄存器为DS；
- 
 - 若有效地址用BP来指定，则其缺省的段寄存器为SS。
- 
+
 指令中给出的8位/16位偏移量用补码表示。在计算有效地址时，如果偏移量是8位，则进行符号扩展成16位。当所得的有效地址超过0FFFFH，则取其64K的模。
 
 例:假设指令：MOV BX, [SI+100H]，在执行它时，(DS)=1000H，(SI)=2345H，内存单元12445H的内容为2715H，问该指令执行后，BX的值是什么？
 
 解：根据寄存器相对寻址方式的规则，在执行本例指令时，源操作数的有效地址EA为：
- 
+
+```
 EA=(SI)+100H=2345H+100H=2445H
- 
+```
+
 该操作数的物理地址应由DS和EA的值形成，即：
- 
+
+```
 PA=(DS)*16+EA=1000H*16+2445H=12445H。
+```
 
 所以，该指令的执行效果是：把从物理地址为12445H开始的一个字的值传送给BX。
 
