--- Auto-Git Commit ---

--- a/Virtualization/Learning/[Manual]AMD虚拟化/SVM/5. VMRUN指令/1. 基本操作[code].md
+++ b/Virtualization/Learning/[Manual]AMD虚拟化/SVM/5. VMRUN指令/1. 基本操作[code].md
@@ -2,8 +2,15 @@
 
 ```x86asm
 //arch/x86/kvm/svm/vmenter.S
-
-
+/**
+ * __svm_vcpu_run - Run a vCPU via a transition to SVM guest mode
+ * @vmcb_pa:    unsigned long
+ * @regs:       unsigned long * (to guest registers)
+ */
+SYM_FUNC_START(__svm_vcpu_run)
+        ......
+        /* Move @regs to RAX. */
+        mov %_ASM_ARG2, %_ASM_AX
 
 3:      vmrun %_ASM_AX
 
