--- Auto-Git Commit ---

--- a/Virtualization/Learning/[Manual]AMD虚拟化/SVM/5. VMRUN指令/1. 基本操作[code].md
+++ b/Virtualization/Learning/[Manual]AMD虚拟化/SVM/5. VMRUN指令/1. 基本操作[code].md
@@ -1,5 +1,17 @@
 
 
+```cpp
+static noinstr void svm_vcpu_enter_exit(struct kvm_vcpu *vcpu,
+                                        struct vcpu_svm *svm)
+{
+        ......
+        if (sev_es_guest(svm->vcpu.kvm)) {
+                __svm_sev_es_vcpu_run(svm->vmcb_pa);
+        } else {
+                __svm_vcpu_run(svm->vmcb_pa, (unsigned long *)&svm->vcpu.arch.regs);
+        ......
+```
+
 ```x86asm
 //arch/x86/kvm/svm/vmenter.S
 /**
@@ -9,8 +21,22 @@
  */
 SYM_FUNC_START(__svm_vcpu_run)
         ......
-        /* Move @regs to RAX. */
-        mov %_ASM_ARG2, %_ASM_AX
+        /* Save @vmcb. */
+        // 将vmcb_pa压栈
+        push %_ASM_ARG1
+        ......
+        // 
+        /* "POP" @vmcb to RAX. */
+        pop %_ASM_AX
+
+        /* Enter guest mode */
+        sti
+1:      vmload %_ASM_AX
+        jmp 3f
+2:      cmpb $0, kvm_rebooting
+        jne 3f
+        ud2
+        _ASM_EXTABLE(1b, 2b)
 
 3:      vmrun %_ASM_AX
 
