--- Auto-Git Commit ---

--- a/Virtualization/Learning/[Manual]AMD虚拟化/SVM/5. VMRUN指令/1. 基本操作[code].md
+++ b/Virtualization/Learning/[Manual]AMD虚拟化/SVM/5. VMRUN指令/1. 基本操作[code].md
@@ -1,5 +1,7 @@
 
 
+
+
 ```cpp
 static noinstr void svm_vcpu_enter_exit(struct kvm_vcpu *vcpu,
                                         struct vcpu_svm *svm)
@@ -25,7 +27,7 @@ SYM_FUNC_START(__svm_vcpu_run)
         // 将vmcb_pa压栈
         push %_ASM_ARG1
         ......
-        // 
+        // vmcb_pa出栈, 赋值给RAX寄存器
         /* "POP" @vmcb to RAX. */
         pop %_ASM_AX
 
