--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/3. KVM/3. CPU虚拟化/4. 代码分析.md
@@ -162,7 +162,7 @@ kvm结构体见上节
 
 ### 4.3.1. 虚拟机创建过程kvm_dev_ioctl_create_vm
 
-KVM 的**该部分代码**实现在**kvm\_dev** 的 **file\_operation 结构体**中，对应的代码在 **kvm\_main.c** 中调用 **kvm\_dev\_ioctl\_create\_vm**函数实现，其代码如下：
+KVM 的**该部分代码**实现在`kvm_dev` 的 `file_operation` 结构体中，对应的代码在 `kvm_main.c` 中调用 `kvm_dev_ioctl_create_vm` 函数实现，其代码如下：
 
 代码5\-7 KVM\_CREATE\_VM实现代码
 
@@ -179,7 +179,7 @@ static long kvm_dev_ioctl(struct file *filp,
 (1885)             break;
 ```
 
-**kvm\_dev\_ioctl\_create\_vm**函数(virt/kvm/kvm\_main.c)通过调用**kvm\_create\_vm**函数对**KVM结构体**进行创建。
+`kvm_dev_ioctl_create_vm`函数(`virt/kvm/kvm_main.c`)通过调用`kvm_create_vm`函数对**KVM结构体**进行创建。
 
 ```cpp
 // virt/kvm/kvm_main.c
@@ -261,7 +261,7 @@ static struct kvm *kvm_create_vm(unsigned long type)
 
 先**分配一个虚拟机struct kvm数据结构**
 
-在 x86体系架构中，**KVM结构体**的**初始化**任务在**kvm\_arch\_init\_vm**函数(arch/x86/kvm/x86.c)中进行，进行了**分配内存**、**初始化设备列表**、设置**中断管理**和**初始化 tsc 的spin\_lock的功能**。
+在 x86体系架构中，**KVM结构体**的**初始化**任务在`kvm_arch_init_vm`函数(arch/x86/kvm/x86.c)中进行，进行了**分配内存**、**初始化设备列表**、设置**中断管理**和**初始化 tsc 的spin\_lock的功能**。
 
 在**完成之后**，将执行**硬件初始化**工作，该部分硬件初始化工作通过调用**on\_each\_cpu宏**，将在**每个物理CPU**上执行**同样的操作**。该操作主要是尝试将**所有的CPU**切换入**vitualize模式**(使用`vmxon`指令)，并且设置好**时钟**等信息，这个过程通过 **kvm\_arch\_hardware\_enable** 函数完成。
 
@@ -324,11 +324,11 @@ static long kvm_vm_ioctl(struct file *filp,
 
 ## 6.1. 基本原理
 
-创建vCPU实际上就是**创建vCPU的描述符**，在KVM中，**vCPU对应的数据结构体**为**kvm\_vcpu**。因此，创建vCPU的描述符，简单来说就是**分配相应大小的内存**，并且进行相应的**初始化**工作。
+创建vCPU实际上就是**创建vCPU的描述符**，在KVM中，**vCPU对应的数据结构体**为`kvm_vcpu`。因此，创建vCPU的描述符，简单来说就是**分配相应大小的内存**，并且进行相应的**初始化**工作。
 
-**kvm\_vcpu**中描述符包含的内容有很多，通常会包含各个**平台通用的内容**和**平台相关的内容**。
+`kvm_vcpu`中描述符包含的内容有很多，通常会包含各个**平台通用的内容**和**平台相关的内容**。
 
-在**物理CPU上电**之后，需要进一步初始化才可以使用。在这个过程中，硬件会自动将CPU初始化成特定的状态。**kvm\_vcpu的初始化**也是一个**类似的过程**，将 **kvm\_vcpu 的各个数据结构体**设置成为可用的状态，通常需要包含如下内容。
+在**物理CPU上电**之后，需要进一步初始化才可以使用。在这个过程中，硬件会自动将CPU初始化成特定的状态。**kvm\_vcpu的初始化**也是一个**类似的过程**，将 `kvm_vcpu` 的**各个数据结构体**设置成为可用的状态，通常需要包含如下内容。
 
 - 分配**vCPU标识**，设置`cpu_id`属于**哪个KVM虚拟机**，并且分配对该vCPU的**唯一标识符**。
 - 初始化**虚拟寄存器组**, 在`VT-x`下, 这些信息包含在**VMCS**中
@@ -365,7 +365,7 @@ kvm_vm_ioctl() // kvm ioctl vm指令入口
  |   |   ├─ kvm_x86_ops->vcpu_create(vcpu); //对于intel x86来说，最终调用 vmx_create_vcpu
  |   |   |   ├─ vmx->vpid = allocate_vpid(); // 分配vpid
  |   |   |   ├─ vmx->pml_pg = alloc_page(); // 
- |   |   |   ├─ alloc_loaded_vmcs(&vmx->vmc01); // loaded_vmcs的分配以及初始化
+ |   |   |   ├─ alloc_laded_vmcs(&vmx->vmc01); // loaded_vmcs的分配以及初始化
  |   |   |   |   ├─ loaded_vmcs->vmcs = alloc_vmcs(); // 分配一个页面
  |   |   |   |   ├─ vmcs_clear(loaded_vmcs->vmcs); // 调用vmclear 
  |   |   |   |   ├─ loaded_vmcs->shadow_vmcs = NULL;
@@ -621,9 +621,9 @@ fail_mmu_destroy:
 }
 ```
 
-首先，在1371行，调用**kvm\_arch\_vcpu\_create**函数创建一个**kvm\_vcpu结构体！！！**。该创建内容**与架构相关**，因此，直接调用**kvm\_x86\_ops**中的`create_vcpu`方法执行。
+首先，在1371行，调用`kvm_arch_vcpu_create`函数创建一个**kvm\_vcpu结构体！！！**。该创建内容**与架构相关**，因此，直接调用**kvm\_x86\_ops**中的`create_vcpu`方法执行。
 
-(`kvm_arch_vcpu_create`在`arch/x86/kvm/x86.c`中, 调用`struct kvm\_x86\_ops vmx\_x86\_ops`(定义在arch/x86/kvm/vmx.c)中的`create\_vcpu`(即vmx\_create\_vcpu, 在arch/x86/kvm/vmx.c中))
+(`kvm_arch_vcpu_create`在`arch/x86/kvm/x86.c`中, 调用`struct kvm_x86_ops vmx_x86_ops`(定义在arch/x86/kvm/vmx.c)中的`create_vcpu`(即vmx\_create\_vcpu, 在arch/x86/kvm/vmx.c中))
 
 **每个vCPU**的创建先alloc一个struct **vcpu\_vmx**里面包含了msr, vmcs, vcpu等, 这里不是主要对kvm\_vcpu做初始化
 
