--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/3. CPU虚拟化/2. 数据结构.md
+++ b/Virtualization/3. KVM/3. CPU虚拟化/2. 数据结构.md
@@ -704,7 +704,7 @@ struct kvm_vcpu_arch {
 // include/linux/kvm_host.h
 struct kvm
 {
-    struct kvm_vcpu *vcpus[KVM_MAX_VCPUS];
+    struct kvm_vcpu *vcpus[KVM_MAX_VCPUS]; // 虚拟机的vcpu
     struct list_head vm_list; // 用于挂到全局vm_list列表
     struct kvm_arch arch; // 平台相关
 }
@@ -715,6 +715,7 @@ struct kvm
 ```cpp
 // include/linux/kvm_host.h
 struct kvm_vcpu {
+    struct kvm *kvm;  // 指向此vcpu所属的虚拟机对应的kvm结构
 	int cpu;    /*运行当前VCPU的物理CPU编号*/
 }
 ```
@@ -739,6 +740,7 @@ struct vcpu_svm {
     struct kvm_vcpu vcpu;
     struct vmcb *vmcb;
     unsigned long vmcb_pa;
+}
 ```
 
 `struct vcpu_vmx`代表**vcpu的一个运行环境**, `loaded_vmcs`指向当前vcpu使用的vmcs. 对于非嵌套(即L1)虚拟机, `loaded_vmcs`一直指向`vmcs01`, 对于嵌套(L2), 指向另外的vmcs.
