--- Auto-Git Commit ---

--- a/Virtualization/3. KVM/3. CPU虚拟化/2. 数据结构.md
+++ b/Virtualization/3. KVM/3. CPU虚拟化/2. 数据结构.md
@@ -716,7 +716,7 @@ struct kvm
 // include/linux/kvm_host.h
 struct kvm_vcpu {
     struct kvm *kvm;  // 指向此vcpu所属的虚拟机对应的kvm结构
-	int cpu;    /*运行当前VCPU的物理CPU编号*/
+    int cpu;    /*运行当前VCPU的物理CPU编号*/
 }
 ```
 
@@ -725,7 +725,7 @@ struct kvm_vcpu {
 ```cpp
 // arch/x86/kvm/vmx/vmx.h
 struct vcpu_vmx {
-	struct kvm_vcpu       vcpu;
+	struct kvm_vcpu       vcpu; // 所对应的vcpu
 	/*
 	 * loaded_vmcs points to the VMCS currently used in this vcpu. For a
 	 * non-nested (L1) guest, it always points to vmcs01. For a nested
