--- a/Virtualization/3. KVM/7. 虚拟机迁移/脏页位图机制源码分析.md
+++ b/Virtualization/3. KVM/7. 虚拟机迁移/脏页位图机制源码分析.md
@@ -37,7 +37,7 @@ static void *migration_thread(void *opaque)
 
 这个函数主要是完成迁移的初始化以及内存拷贝过程，这里先看一下里面qemu_savevm_state_begin()这个函数，他里面调用了save_live_setup这个函数指针，这个函数指针在之前被注册，指向了ram_save_setup()这个函数，具体的注册过程这里不进行分析，根据代码追一下可以追到的。ram_save_setup()主要是进行一些初始化的工作，下面看ram_save_setup()这个函数：
 
-```
+```cpp
 static int ram_save_setup(QEMUFile *f, void *opaque)  
 {  
     ........  
