--- Auto-Git Commit ---

--- a/Virtualization/Learning/[Manual]AMD虚拟化/SVM/5. VMRUN指令/1. 基本操作[code].md
+++ b/Virtualization/Learning/[Manual]AMD虚拟化/SVM/5. VMRUN指令/1. 基本操作[code].md
@@ -1,6 +1,20 @@
 
 
-vmcb是一个4KB对齐的页面, 在创建vcpu
+vmcb是一个4KB对齐的页面, 在创建vcpu时候
+
+```cpp
+// arch/x86/kvm/svm/svm.c
+static int svm_create_vcpu(struct kvm_vcpu *vcpu)
+{
+        struct vcpu_svm *svm;
+        struct page *vmcb_page;
+        struct page *vmsa_page = NULL;
+        ......
+        vmcb_page = alloc_page(GFP_KERNEL_ACCOUNT | __GFP_ZERO); // 分配了一个页面
+        ......
+        svm->vmcb = page_address(vmcb_page);
+        svm->vmcb_pa = __sme_set(page_to_pfn(vmcb_page) << PAGE_SHIFT);
+```
 
 
 
