--- Auto-Git Commit ---

--- a/Linux/Memory/系统学习/内存管理全教程(必看)/1. 内存描述/4. 内存页面page.md
+++ b/Linux/Memory/系统学习/内存管理全教程(必看)/1. 内存描述/4. 内存页面page.md
@@ -3,9 +3,9 @@
 
 <!-- code_chunk_output -->
 
-- [1 前景回顾](#1-前景回顾)
-  - [1.1 UMA和NUMA两种模型](#11-uma和numa两种模型)
-  - [1.2 (N)UMA模型中linux内存的机构](#12-numa模型中linux内存的机构)
+- [前景回顾](#前景回顾)
+  - [UMA和NUMA两种模型](#uma和numa两种模型)
+  - [(N)UMA模型中linux内存的机构](#numa模型中linux内存的机构)
   - [1.3 Linux如何描述物理内存](#13-linux如何描述物理内存)
   - [1.4 今日内容(页帧struct page)](#14-今日内容页帧struct-page)
 - [2 页帧](#2-页帧)
@@ -20,16 +20,16 @@
 
 <!-- /code_chunk_output -->
 
-# 1 前景回顾
+# 前景回顾
 
-## 1.1 UMA和NUMA两种模型
+##  UMA和NUMA两种模型
 
 共享存储型多处理机有两种模型
 
 - 均匀存储器存取（Uniform-Memory-Access，简称UMA）模型
 - 非均匀存储器存取（Nonuniform-Memory-Access，简称NUMA）模型
 
-## 1.2 (N)UMA模型中linux内存的机构
+##  (N)UMA模型中linux内存的机构
 
 非一致存储器访问(NUMA)模式下
 
