--- Auto-Git Commit ---

--- a/Linux/Memory/系统学习/内存管理全教程(必看)/1. 内存描述/1. 概述.md
+++ b/Linux/Memory/系统学习/内存管理全教程(必看)/1. 内存描述/1. 概述.md
@@ -47,12 +47,11 @@
 共享存储型多处理机有两种模型
 
 - 均匀存储器存取（Uniform-Memory-Access，简称UMA）模型
-
 - 非均匀存储器存取（Nonuniform-Memory-Access，简称NUMA）模型
 
 ## 1.2 UMA模型
 
-传统的多核运算是使用SMP(Symmetric Multi-Processor )模式：将**多个处理器**与**一个集中的存储器**和**I/O总线**相连。**所有处理器只能访问同一个物理存储器**，因此SMP系统有时也被称为一致存储器访问（UMA）结构体系，一致性意指无论在什么时候，处理器只能为内存的每个数据保持或共享**唯一一个数值**。
+传统的多核运算是使用SMP(Symmetric Multi-Processor )模式：将**多个处理器**与**一个集中的存储器**和**I/O总线**相连。**所有处理器只能访问同一个物理存储器**，因此SMP系统有时也被称为**一致存储器访问（UMA）结构体系**，一致性意指无论在什么时候，处理器只能为内存的每个数据保持或共享**唯一一个数值**。
 
 物理存储器被所有处理机**均匀共享**。所有处理机对所有存储字具有**相同的存取时间**，所以称为均匀存储器存取的原因。每台处理机可以有**私用高速缓存**（**cache可以是私有的！！！**）,**外围设备**也以一定形式**共享**。
 
