--- a/Linux/Memory/系统学习/内存管理全教程(必看)/1. 内存描述/4. 内存页面page.md
+++ b/Linux/Memory/系统学习/内存管理全教程(必看)/1. 内存描述/4. 内存页面page.md
@@ -3,12 +3,8 @@
 
 <!-- code_chunk_output -->
 
-- [前景回顾](#前景回顾)
-  - [UMA和NUMA两种模型](#uma和numa两种模型)
-  - [(N)UMA模型中linux内存的机构](#numa模型中linux内存的机构)
-  - [1.3 Linux如何描述物理内存](#13-linux如何描述物理内存)
-  - [1.4 今日内容(页帧struct page)](#14-今日内容页帧struct-page)
-- [2 页帧](#2-页帧)
+  - [今日内容(页帧struct page)](#今日内容页帧struct-page)
+- [页帧](#页帧)
   - [2.1 struct page结构](#21-struct-page结构)
   - [2.2 mapping & index](#22-mapping-index)
   - [2.3 private私有数据指针](#23-private私有数据指针)
@@ -20,47 +16,15 @@
 
 <!-- /code_chunk_output -->
 
-# 前景回顾
+## 今日内容(页帧struct page)
 
-##  UMA和NUMA两种模型
+分页单元可以实现把线性地址转换为物理地址,为了效率起见, **线性地址**(**页是线性地址的概念！！！**)被分为**固定长度**为单位的**组**, 称为"**页**", **页内部的线性地址**被映射到**连续的物理地址**. 这样内核可以指定**一个页**的**物理地址**和**其存储权限**,而**不用**指定页所包含的全部**线性地址**的**存储权限**.
 
-共享存储型多处理机有两种模型
-
-- 均匀存储器存取（Uniform-Memory-Access，简称UMA）模型
-- 非均匀存储器存取（Nonuniform-Memory-Access，简称NUMA）模型
-
-##  (N)UMA模型中linux内存的机构
-
-非一致存储器访问(NUMA)模式下
-
-- 处理器被划分成多个"节点"(node), 每个节点被分配有的本地存储器空间. 所有节点中的处理器都可以访问全部的系统物理存储器，但是访问本节点内的存储器所需要的时间，比访问某些远程节点内的存储器所花的时间要少得多
-- 内存被分割成多个区域（BANK，也叫"簇"），依据簇与处理器的"距离"不同, 访问不同簇的代码也会不同.
-
-## 1.3 Linux如何描述物理内存
-
-Linux把物理内存划分为三个层次来管理
-
-| 层次 | 描述 |
-|:----:|:----:|
-| 存储节点(Node) |  CPU被划分为多个节点(node), 内存则被分簇, 每个CPU对应一个本地物理内存, 即一个CPU-node对应一个内存簇bank，即每个内存簇被认为是一个节点 |
-| 管理区(Zone)   | 每个物理内存节点node被划分为多个内存管理区域, 用于表示不同范围的内存, 内核可以使用不同的映射方式映射物理内存 |
-| 页面(Page) 	   |	内存被细分为多个页面帧, 页面是最基本的页面分配的单位　｜
-
-- 首先内存被划分为结点.内存中的每个节点都是由pg\_data\_t描述,而pg\_data\_t由struct pglist\_data定义而来, 该数据结构定义在[include/linux/mmzone.h, line 615](http://lxr.free-electrons.com/source/include/linux/mmzone.h#L615), 每个结点关联到系统中的一个处理器, 内核中表示为`pg_data_t`的实例. 系统中每个节点被链接到一个以NULL结尾的`pgdat_list`链表中<而其中的每个节点利用`pg_data_tnode_next`字段链接到下一节．而对于PC这种UMA结构的机器来说, 只使用了一个成为contig\_page\_data的静态pg\_data\_t结构.
-
-- 接着各个节点又被划分为内存管理区域, 一个管理区域通过struct zone\_struct描述, 其被定义为zone\_t,用以表示内存的某个范围,低端范围的16MB被描述为ZONE\_DMA,某些工业标准体系结构中的(ISA)设备需要用到它,然后是可直接映射到内核的普通内存域ZONE\_NORMAL,最后是超出了内核段的物理地址域ZONE\_HIGHMEM, 被称为高端内存.　是系统中预留的可用内存空间, 不能被内核直接映射.
-
-- 最后页帧(page frame)代表了系统内存的最小单位, 堆内存中的每个页都会创建一个struct page的一个实例. 传统上，把内存视为连续的字节，即内存为字节数组，内存单元的编号(地址)可作为字节数组的索引. 分页管理时，将若干字节视为一页，比如4K byte. 此时，内存变成了连续的页，即内存为页数组，每一页物理内存叫页帧，以页为单位对内存进行编号，该编号可作为页数组的索引，又称为页帧号.
-
-## 1.4 今日内容(页帧struct page)
-
-分页单元可以实现把线性地址转换为物理地址,为了效率起见,**线性地址**(**页是线性地址的概念！！！**)被分为固定长度为单位的组,称为"**页**",**页内部的线性地址**被映射到**连续的物理地址**.这样内核可以指定**一个页**的**物理地址**和**其存储权限**,而**不用**指定页所包含的全部**线性地址**的**存储权限**.
-
-分页单元把所有**RAM**分为固定长度的页帧(也叫**页框**, **物理页**, 英文page frame). 每一个页帧包含一个页(page).也就是说一个页帧的长度与一个页的长度一致. **页框是主存的一部分**,因此也是一个存储区域.简单来说,**页是一个数据块**（**！！！**）,可以存放在任何**页框**(**物理内存中！！！**)或者磁盘(被交换至**交换分区**)中
+分页单元把所有**RAM**分为固定长度的页帧(也叫**页框**、**物理页**, 英文`page frame`). 每一个页帧包含一个页(page).也就是说一个页帧的长度与一个页的长度一致. **页框是主存的一部分**, 因此也是一个存储区域.简单来说,**页是一个数据块**（**！！！**）, 可以存放在任何**页框**(**物理内存中！！！**)或者磁盘(被交换至**交换分区**)中
 
 我们今天就来详细讲解一下linux下物理页帧的描述
 
-# 2 页帧
+# 页帧
 
 内核把**物理页**作为**内存管理的基本单位**.尽管处理器的**最小可寻址单位**通常是**字节**, 但是,内存管理单元MMU通常以页为单位进行处理.因此，从**虚拟内存**的上来看，**页就是最小单位**（**页是虚拟内存！！！**）.
 
@@ -74,7 +38,7 @@ Linux把物理内存划分为三个层次来管理
 
 ## 2.1 struct page结构
 
- 内核用[struct page(include/linux/mm_types.h?v=4.7, line 45)](http://lxr.free-electrons.com/source/include/linux/mm_types.h?v4.7#L45)结构表示系统中的每个**物理页**（**物理页！！！**）.
+ 内核用`struct page`(`include/linux/mm_types.h`)结构表示系统中的每个**物理页**（**物理页！！！**）.
 
 出于**节省内存**的考虑，struct page中使用了**大量的联合体union**.
 
@@ -288,17 +252,17 @@ struct page {
 ```
 
 | 字段 | 描述 |
-|:---:|:----:|
-| flag | 用来存放**页的状态**，**每一位**代表**一种状态**，所以至少可以**同时表示出32中不同的状态**(**同时！！！**),这些状态定义在**linux/page-flags.h**中 |
-| virtual | 对于如果物理内存可以**直接映射**内核的系统,我们可以之间映射出虚拟地址与物理地址的管理,但是对于需要使用**高端内存区域的页**（这里指的是**物理页！！！**）,即**无法直接映射**到内核的**虚拟地址空间**,因此需要用virtual保存该**页的虚拟地址** |
-|  \_refcount | 引用计数，表示内核中**引用**该page的**次数**,如果要操作该page, 引用计数会+1, 操作完成-1.当该值为0时,表示没有引用该page的位置，所以该page可以**被解除映射**（只要引用数是0），这往往在**内存回收**时是有用的 |
-| \_mapcount | **被页表映射的次数**，也就是说该page**同时**被多少个**进程共享**。**初始值为-1**，如果只被**一个进程的页表映射**了，该**值为0**.如果该page处于**伙伴系统**中，该值为PAGE\_BUDDY\_MAPCOUNT\_VALUE（**-128**），内核通过判断该值是否为**PAGE\_BUDDY\_MAPCOUNT\_VALUE**来确定该page**是否属于伙伴系统** |
-| index | 页帧在映射的**虚拟空间**（**vma\_area,不是物理空间!!!**）内的偏移；**一个文件**可能只**映射一部分**，假设**映射了1M的空间**，index指的是在**1M空间内的偏移**，而不是在整个文件内的偏移 |
-| private | **私有数据指针**，由**应用场景**确定其具体的含义 |
-| lru | 链表头，用于在**各种链表上维护该页**,以便于按页将不同类别分组,主要有3个用途: **伙伴算法**,**slab分配器**,**被用户态使用或被当做页缓存**使用 |
-| mapping | 指向与该页相关的**address\_space对象** |
+|:---:|:----|
+| `flag` | 用来存放**页的状态**，**每一位**代表**一种状态**，所以至少可以**同时表示出32中不同的状态**(**同时！！！**),这些状态定义在**linux/page-flags.h**中 |
+| `virtual` | 对于如果物理内存可以**直接映射**内核的系统, 我们可以之间映射出虚拟地址与物理地址的管理,但是对于需要使用**高端内存区域的页**（这里指的是**物理页！！！**）, 即**无法直接映射**到内核的**虚拟地址空间**, 因此需要用virtual保存该**页的虚拟地址** |
+|  `_refcount` | 引用计数，表示内核中**引用**该page的**次数**,如果要操作该page, 引用计数会+1, 操作完成-1.当该值为0时,表示没有引用该page的位置，所以该page可以**被解除映射**（只要引用数是0），这往往在**内存回收**时是有用的 |
+| `_mapcount` | **被页表映射的次数**，也就是说该page**同时**被多少个**进程共享**。**初始值为-1**，如果只被**一个进程的页表映射**了，该**值为0**.如果该page处于**伙伴系统**中，该值为PAGE\_BUDDY\_MAPCOUNT\_VALUE（**-128**），内核通过判断该值是否为**PAGE\_BUDDY\_MAPCOUNT\_VALUE**来确定该page**是否属于伙伴系统** |
+| `index` | 页帧在映射的**虚拟空间**（**vma\_area,不是物理空间!!!**）内的偏移；**一个文件**可能只**映射一部分**，假设**映射了1M的空间**，index指的是在**1M空间内的偏移**，而不是在整个文件内的偏移 |
+| `private` | **私有数据指针**，由**应用场景**确定其具体的含义 |
+| `lru` | 链表头，用于在**各种链表上维护该页**,以便于按页将不同类别分组,主要有3个用途: **伙伴算法**,**slab分配器**,**被用户态使用或被当做页缓存**使用 |
+| `mapping` | 指向与该页相关的**address\_space对象** |
 
->注意区分\_count和\_mapcount，**\_mapcount**表示的是**映射次数**，而\_**count**表示的是**使用次数**；**被映射**了**不一定在使用**，但要**使用**必须**先映射**。
+>注意区分`_count`和`_mapcount`，`_mapcount**表示的是**映射次数**，而\_**count**表示的是**使用次数**；**被映射**了**不一定在使用**，但要**使用**必须**先映射**。
 
 ## 2.2 mapping & index
 
