--- a/Virtualization/Learning/[Manual]AMD虚拟化/SVM/5. VMRUN指令/1. 基本操作[code].md
+++ b/Virtualization/Learning/[Manual]AMD虚拟化/SVM/5. VMRUN指令/1. 基本操作[code].md
@@ -13,8 +13,10 @@ static int svm_create_vcpu(struct kvm_vcpu *vcpu)
         vmcb_page = alloc_page(GFP_KERNEL_ACCOUNT | __GFP_ZERO); // 分配了一个页面
         ......
         svm->vmcb = page_address(vmcb_page); // 虚拟地址
-        svm->vmcb_pa = __sme_set(page_to_pfn(vmcb_page) << PAGE_SHIFT);
+        svm->vmcb_pa = __sme_set(page_to_pfn(vmcb_page) << PAGE_SHIFT); // 物理地址
 ```
+
+
 
 
 
